--- a/OscTracker/res/values/strings.xml
+++ b/OscTracker/res/values/strings.xml
@@ -4,5 +4,17 @@
     <string name="app_name">Osc Tracker</string>
     <string name="action_settings">Settings</string>
     <string name="addItemHint">Add new item</string>
+    
+ 	<string-array name="sdlc_phases_array">
+        <item>Analysis</item>
+        <item>Design</item>
+        <item>Coding</item>
+        <item>Testing</item>
+        <item>UAT</item>
+        <item>Activations</item>
+        <item>Codeprop</item>
+        <item>MUT</item>
+    </string-array>
+    
 
 </resources>
